# CloudWatch-MCP-Server

./: DOCKERFILE  pyproject.toml
docs/: ai-integration.md  troubleshooting.md
src/: client.py
src/cw-mcp-server/: server.py
src/cw_mcp_server/: server.py
