[project]
name = "Log-Analyzer-with-MCP"
version = "0.1.0"
description = "MCP server that provides AI assistants access to CloudWatch Logs"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.37.11",
    "fastmcp>=2.12.5",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.12,<3",
    "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "pytest>=8.3",
    "mypy>=1.11"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cw_mcp_server"]
